tests/ui/consts/const-eval/issue-50814-2.mir-opt.stderr
error[E0080]: evaluation of `<A<()> as Foo<()>>::BAR` failed
  --> $DIR/issue-50814-2.rs:16:24
   |
LL |     const BAR: usize = [5, 6, 7][T::BOO];
   |                        ^^^^^^^^^^^^^^^^^ index out of bounds: the length is 3 but the index is 42

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:6
   |
LL |     &<A<T> as Foo<T>>::BAR
   |      ^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:6
   |
LL |     &<A<T> as Foo<T>>::BAR
   |      ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:20:6
   |
LL |     &<A<T> as Foo<T>>::BAR
   |      ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
